Fixed app shortcut widget
- closes : #5101
- closes : #5056
- closes : #5055