@@ -283,6 +283,7 @@ import java.util.Map;
 import java.util.Optional;
 import java.util.function.Predicate;
 import java.util.function.Supplier;
+import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import app.lawnchair.LawnchairApp;
@@ -2326,7 +2327,7 @@ public class Launcher extends StatefulActivity<LauncherState>
     @Override
     public void bindItems(final List<ItemInfo> items, final boolean forceAnimateIcons) {
         bindInflatedItems(items.stream().map(i -> Pair.create(
-                i, getItemInflater().inflateItem(i, getModelWriter()))).toList(),
+                i, getItemInflater().inflateItem(i, getModelWriter()))).collect(Collectors.toList()),
                 forceAnimateIcons ? new AnimatorSet() : null);
     }
 
